# mill.tools

./: .env.example  .git-blame-ignore-revs  .gitignore  .pylintrc  CLAUDE.md  LICENSE  README.md  gui.py  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard.py  ruff_fix.py
.claude/skills/architecture/: SKILL.md
.claude/skills/cli/: SKILL.md
.claude/skills/design-system/: SKILL.md  events.md
.claude/skills/ml-rag/: SKILL.md
.claude/skills/testing/: SKILL.md  mocks-gui-cli.md  mocks-llm-rag-ml.md  mocks-media.md
docs/: HISTORY.md  MILL_APP_ICON_PLAN.md  MILL_DESIGN_SYSTEM.md  MILL_PR3_AUDIO_PLAN.md  README.md  ROADMAP.md
docs/estudo/: GLOSSARIO.md  GUIA_ESTUDO.md  README.md  REVISAO.md
docs/estudo/arquivos/: ffmpeg.md  llm_factory.md  sessao2-vertical-video.md  utils.md
docs/estudo/conceitos/: APENDICE_WINDOWS_HARDWARE.md  CLI.md  EMBEDDINGS.md  EVENTOS.md  FLET_GUI.md  MACHINE_LEARNING.md  PERSISTENCIA.md  PRINCIPIOS.md  RAG.md  TESTES.md  decomposicao.md
docs/estudo/modulos/: audio.md  biblioteca.md  dados.md  documentos.md  ia.md  imagem.md  observatorio.md  receitas.md  transcricao.md
docs/plan/: PLANO_ML_NOVAS_FEATURES.md  PLANO_REFINAMENTO_ML_TEXTO_RAG.md  PLANO_TIMING_MODELOS.md
docs/plans/active/: PLANO_AUDIO_TIER3_RESUMO.md  PLANO_CORRECOES_CORE_DATA.md  PLANO_CORRECOES_QUARTETO_ML.md
docs/plans/archive/: ANALYSIS_PROFILES.md  GUI_FLET_PR678.md  GUI_REFACTOR_PLAN.md  HOME_SCREEN_PLAN.md  MILL_DS_1_1_HELP_TOOLTIPS_PLAN.md  MILL_IMAGE_MODULE_RESEARCH.md  MILL_MIGRATION_PLAN.md  MILL_PR5_DOCUMENTS_PLAN.md  MILL_SPLASH_SPINNER_PLAN.md  ML_SEM_PYTORCH.md  PLANO_PR9.3_PREVIA_AVALIACAO_INDEXACAO.md  PLANO_PR9_DADOS.md  PLANO_REFATORACAO_PREVIA.md  PR-IMG-2B_PLAN.md  PR31-A_AUDIO_PLAN.md  PR4_VIDEO_PLAN.md  REFATORACAO_PREVIA.md  ROADMAP.md  ROADMAP_PR6_BIBLIOTECA.md  ROADMAP_PR7.2_IA_INDICE.md  ROADMAP_PR7_IA.md  ROADMAP_PR8_RECEITAS.md  ROADMAP_TIER0_LACUNAS.md  STATUS_TIER0.md  architecture-SKILL.md  audio_extension_plan.md  tests_plan_part1_unit.md  tests_plan_part2_integration.md
docs/plans/implemented/: PLANO_0_FUNDACAO_DADOS.md  PLANO_1_GRAFICOS.md  PLANO_2_PAINEIS_HUBS.md  PLANO_3_FUNDACAO_ML.md  PLANO_4A_SEMANTICO.md  PLANO_4B_SUPERVISIONADO_TEXTUAL.md  PLANO_AUDIO_TIER1.md  PLANO_AUDIO_TIER2.md  PLANO_CONVERSA_MULTITURNO.md  PLANO_CORRECOES_CORE_DOCUMENT.md  PLANO_CORRECOES_QUARTETO_ML.md  PLANO_CORRECOES_RAG_ML_2.md  PLANO_CORRECOES_SRC_ANALYSIS.md  PLANO_CORRECOES_SRC_RAIZ.md  PLANO_FONTES_E_PISO_RELEVANCIA.md  PLANO_HOME_HOVER_EXPAND.md  PLANO_INSIGHTS_QUALIDADE.md  PLANO_ML_NOVAS_FEATURES.md  PLANO_NL2CLI_HUB_IA.md  PLANO_RAG_ESPACO_EMBEDDING.md  PLANO_RAG_EVAL.md  PLANO_REFINAMENTO_ML_TEXTO_RAG.md  PLANO_REORGANIZACAO_DOCS_SKILLS.md
docs/reference/: AVALIACAO_ML_RAG_FABLE5.md  MODELOS_IA.md  PANDAS_POLARS_DADOS.md  RELATORIO_CENARIO_TORCH.md
ollama/: Modelfile  Modelfile.gemma3-1b  Modelfile.gemma3-4b  Modelfile.nomic  Modelfile.phi4mini  Modelfile.vision
src/: __init__.py  __main__.py  analyzer.py  formatter.py  llm_factory.py  llm_utils.py  prompter.py  transcriber.py  transcript_io.py  utils.py
src/analysis/: __init__.py  prompts.py  report.py  types.py
src/analysis/profiles/: __init__.py  creative.py  documents.py  media.py  quick.py
src/cli/: ai.py  audio.py  bus.py  data.py  document.py  image.py  library.py  observatory.py  recipes.py  reference.py  transcription.py  video.py
src/core/: __init__.py  ffmpeg.py  io_atomic.py  io_types.py  metadata.py  subtitles.py  ytdlp_cookies.py
src/core/audio/: __init__.py  args.py  converter.py  denoiser.py  downloader.py  info.py  normalizer.py  silence.py  speed.py  visualize.py
src/core/data/: __init__.py  assess.py  charts.py  convert.py  datacard.py  engine.py  frames.py  ml.py  nl2sql.py  profile.py  scanner.py  store.py  types.py  validate.py
src/core/document/: __init__.py  _shared.py  args.py  converter.py  info.py  ocr.py  processor.py  qr.py
src/core/image/: __init__.py  _paths.py  args.py  background.py  converter.py  describe.py  dhash.py  downloader.py  exif.py  filter_previews.py  info.py  ocr.py  smart_crop.py  transform.py
src/core/ml/: __init__.py  cache.py  classify.py  cluster.py  dedup.py  deps.py  features.py  labeling.py  mapviz.py  project.py  recommend.py  store.py  types.py
src/core/observatory/: __init__.py  _jsonlog.py  activity.py  disk_usage.py  logs.py  model_timing.py  status.py
src/core/rag/: __init__.py  analytics.py  batch.py  bm25.py  chat.py  condense.py  embedder.py  eval.py  feedback.py  indexer.py  retriever.py  stats.py  store.py  templates.py  types.py
src/core/recipes/: __init__.py  history.py  inputs.py  presets.py  registry.py  runner.py  store.py  types.py  validate.py
src/core/text/: __init__.py  clean.py  entities.py  keywords.py  lang.py  nl2cli.py  reader.py  summarize.py
src/core/video/: __init__.py  args.py  converter.py  downloader.py  info.py
src/gui/: __init__.py  app.py  assets.py  events.py  help_content.py  home.py  settings.py  settings_dialog.py  splash.py  workers.py
src/gui/components/: __init__.py  audio_player.py  input_source.py  profile_selector.py
test_data/: avaliacoes.json  clientes.csv  funcionarios.tsv  gerar_parquet.py  orcamento.xlsx  pedidos.json  produtos.tsv  rh_folha.xlsx  vendas.csv
tests/: conftest.py  test_analyzer.py  test_formatter.py  test_llm_factory.py  test_llm_utils.py  test_prompter.py  test_transcriber.py  test_transcript_io.py  test_utils.py
tests/analysis/: test_profiles.py  test_prompts.py  test_report.py  test_report_golden.py  test_types.py
tests/cli/: test_ai_cli.py  test_audio_cli.py  test_bus.py  test_data_cli.py  test_document_cli.py  test_image_cli.py  test_library_cli.py  test_observatory_cli.py  test_recipe_cli.py  test_reference.py  test_transcribe_main.py  test_transcription.py  test_video_cli.py
tests/core/: test_ffmpeg.py  test_io_atomic.py  test_metadata.py  test_subtitles.py  test_ytdlp_cookies.py
tests/gui/: test_events.py  test_file_viewer.py  test_form_env.py  test_settings.py  test_settings_dialog.py  test_workers_text.py
(+269 files in other folders)
