[project]
name = "mill-tools"
version = "0.1.0"
description = "Multiferramenta pessoal para processamento de áudio, vídeo e transcrição."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ctranslate2>=4.7.2",
    "faster-whisper>=1.2.1",
    "flet>=0.28",
    "langchain-google-genai>=2.1.0",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.3",
    "noisereduce>=3.0",
    "pillow>=12",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "yt-dlp>=2026.3.17",
    "pymupdf>=1.24",
    "qrcode>=7.4",
]

[project.optional-dependencies]
ai-image = ["rembg[cpu]>=2.0.50"]
ocr = ["pytesseract>=0.3"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
testpaths  = ["tests"]
addopts    = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: testes unitários — sem dependências externas",
    "integration: requer ffmpeg, arquivos reais ou rede — skip com -m 'not integration'",
]

[tool.coverage.run]
source = ["src"]
omit   = ["src/gui/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
