[project]
name = "mill.tools"
version = "0.1.0"
description = "Multiferramenta pessoal para processamento de áudio, vídeo e transcrição."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ctranslate2>=4.7.2",
    "faster-whisper>=1.2.1",
    "flet>=0.28",
    "langchain-google-genai>=2.1.0",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.3",
    "noisereduce>=3.0",
    "numpy>=1.26",
    "pillow>=12",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "yt-dlp>=2026.3.17",
    "pymupdf>=1.24",
    "qrcode>=7.4",
    "flet-desktop>=0.85.2",
    "duckdb>=1.5.4",
    "charset-normalizer>=3.4.7",
    "pytesseract>=0.3",
]

[project.optional-dependencies]
ai-image = ["rembg[cpu]>=2.0.50"]
ocr = ["pytesseract>=0.3"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-randomly>=4.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.14",
]

[tool.ruff.lint]
# Keep every autofix EXCEPT auto-removal of unused imports (F401). The
# PostToolUse editor hook runs `ruff check --fix`; multi-step edits add an
# import in one step and its first usage in the next, so auto-removal would
# strip the still-needed import in between. Unused imports are still *reported*
# (just removed deliberately, never silently). See .claude/hooks/ruff_fix.py.
fixable = ["ALL"]
unfixable = ["F401", "F841"]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
testpaths  = ["tests"]
addopts    = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: testes unitários — sem dependências externas",
    "integration: requer ffmpeg, arquivos reais ou rede — skip com -m 'not integration'",
]
# pytest-timeout: protege contra ffmpeg/yt-dlp travados
timeout = 60
# pytest-randomly: ordem aleatória detecta dependência implícita entre testes
# (Desabilitar com `-p no:randomly`. Seed fixa via `--randomly-seed=NNN`.)

[tool.coverage.run]
source = ["src"]
omit   = ["src/gui/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
